<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gotify</string>
    <string name="message_bar_name">Gotify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="found_gotify_version">Found Gotify v%s</string>
    <string name="version_failed_status_code">Request to \'%s\' failed with status code %d</string>
    <string name="version_failed">Request to \'%s\' failed. %s.</string>
    <string name="wronguserpw">There is no user with this username and password</string>
    <string name="create_client_title">Client Name</string>
    <string name="create_client_message">Choose a name for your session</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="create_client_failed">Create client failed</string>
    <string name="created_client">Created client</string>
    <string name="title_activity_logs">Logs</string>
    <string name="retry">Retry</string>
    <string name="logout">Logout</string>
    <string name="oops">Oops</string>
    <string name="not_available">Cannot connect to %s</string>
    <string name="auth_failed">Server returned 401 unauthorized while trying to get current user. This can be caused by deleting the client for this session.</string>
    <string name="other_error">Could not get current user. Server (%s) responded with code %d: body (first 200 chars): %s</string>
    <string name="websocket_failed">Connection failed, trying again in %d minutes</string>
    <string name="websocket_closed_logout">User action required: Please login, the authentication token isn\'t valid anymore.</string>
    <string name="websocket_closed_try_reconnect">Connection closed, trying to establish a new one.</string>
    <string name="grouped_message">Received %d messages while being disconnected</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_app">Delete this application</string>
    <string name="error_delete_app">Could not delete this app</string>
    <string name="delete_logs">Delete logs</string>
    <string name="copy_logs">Copy logs</string>
    <string name="logs_copied">Logs copied</string>
    <string name="snackbar_deleted">Message deleted</string>
    <string name="snackbar_undo">Undo</string>
    <string name="all_messages">All Messages</string>
    <string name="logs">Logs</string>
    <string name="message_image_desc">The image of a message</string>
    <string name="delete_message">Delete message</string>
    <string name="gotify_url">https://push.example.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="disabled_validate_ssl">Disable SSL Validation</string>
    <string name="select_ca_certificate">Select CA Certificate</string>
    <string name="select_ca_file">Select a Certificate File</string>
    <string name="please_install_file_browser">Please install a file browser</string>
    <string name="select_ca_failed">Failed to read CA: %s</string>
    <string name="login">Login</string>
    <string name="check_url">Check URL</string>
    <string name="gotify_logo">Gotify logo</string>
    <string name="refresh_all">Refresh all</string>
    <string name="logout_confirm">Do you really want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ack">Are you sure?</string>
    <string name="missed_messages">Missed messages</string>
    <string name="grouped_notification_text">New Messages</string>
    <string name="websocket_listening">Listening to %s</string>
    <string name="websocket_could_not_connect">Could not connect %s</string>
    <string name="websocket_init">Initializing</string>
    <string name="versions">gotify/server v%s</string>
    <string name="cversion">gotify/android v%s</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="done">Done</string>
    <string name="no_certificate_selected">No certificate selected</string>
    <string name="remove_ca_certificate">Remove CA Certificate</string>
    <string name="warning">Warning</string>
    <string name="http_warning">Using http is insecure and it\'s recommend to use https instead. Use your favorite search engine to get more information about this topic.</string>
    <string name="i_understand">I Understand</string>
    <string name="websocket_no_network">Waiting for network</string>
    <string name="connection">%s</string>
    <string name="no_messages_yet">There are no messages, yet.\nSend a message to Gotify\nand it will appear here.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_key_theme">theme</string>
    <string name="setting_time_format">Time format</string>
    <string name="setting_key_time_format">time_format</string>
    <string name="push_message">Push message</string>
    <string name="appListDescription">App:</string>
    <string name="priorityDescription">Priority:</string>
    <string name="push_button">Push Message</string>
    <string name="push_title_hint">Title</string>
    <string name="push_content_hint">Content</string>
    <string name="push_priority_hint">Priority</string>
    <string name="push_missing_app_info">There are no applications available on the server to push a message to.</string>
    <string name="message_copied_to_clipboard">Content copied to clipboard</string>
    <string name="not_loggedin_share">Cannot share to Gotify, because you aren\'t logged in.</string>
</resources>
